remade the whole thing from scratch